backend fixes